--- a/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
+++ b/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
@@ -1,7 +1,7 @@
 <h2>Listado de detalles de la factura</h2>
 
 <div>
-    <button type="button" (click)="toggleForm()">Nuevo detalle</button>
+    <button type="button" (click)="toggleForm(1, detalleFacturaForm)">Nuevo detalle</button>
 
     <br><br>
 
@@ -26,7 +26,7 @@
                 <td>{{detalleFactura.precio}}</td>
                 <td>{{detalleFactura.iva}}</td>
                 <td>{{detalleFactura.total}}</td>
-                <td><button type="button" (click)="toggleForm()">Editar</button></td>
+                <td><button type="button" (click)="toggleForm(2, detalleFactura)">Editar</button></td>
                 <td><button type="button" (click)="onClickBorrar(detalleFactura.id, detalleFactura.concepto)">Borrar</button></td>
             </tr>
             <tr>
@@ -45,25 +45,27 @@
 <div id="formDetalle" *ngIf="mostrarFormulario">
     <form #detalleForm="ngForm" (ngSubmit)="onSubmit(detalleForm.value)">
         <label for="cantidad">Cantidad: </label>
-        <input type="number" id="cantidad" name="cantidad" ngModel required>
+        <input type="number" id="cantidad" name="cantidad" [(ngModel)]="detalleFacturaForm.cantidad" required>
 
         <br><br>
       
         <label for="concepto">Concepto: </label>
-        <input type="text" id="concepto" name="concepto" ngModel required>
+        <input type="text" id="concepto" name="concepto" [(ngModel)]="detalleFacturaForm.concepto" required>
 
         <br><br>
       
         <label for="precio">Precio: </label>
-        <input type="number" id="precio" name="precio" ngModel required>
+        <input type="number" id="precio" name="precio" [(ngModel)]="detalleFacturaForm.precio" required>
 
         <br><br>
       
         <label for="tipo_iva">Tipo IVA: </label>
-        <input type="number" id="tipo_iva" name="tipo_iva" ngModel required>
+        <input type="number" id="tipo_iva" name="tipo_iva" [(ngModel)]="detalleFacturaForm.tipo_iva" required>
 
         <br><br>
+
+        <input type="hidden" id="id" name="id" [(ngModel)]="detalleFacturaForm.id">
       
-        <button type="submit" (click)="toggleForm()" [disabled]="!detalleForm.valid">{{textoBoton}}</button>
+        <button type="submit" (click)="toggleForm(0, detalleFacturaForm)" [disabled]="!detalleForm.valid">{{textoBoton}}</button>
     </form>      
 </div>
