--- a/CURSO/DWEC/ANGULAR/pruebasConStandalone/src/app/components/lista-detalle/lista-detalle.component.html
+++ b/CURSO/DWEC/ANGULAR/pruebasConStandalone/src/app/components/lista-detalle/lista-detalle.component.html
@@ -19,16 +19,18 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let detalleFactura of detallesFactura">
-                <td>{{detalleFactura.id}}</td>
-                <td>{{detalleFactura.cantidad}}</td>
-                <td>{{detalleFactura.concepto}}</td>
-                <td>{{detalleFactura.precio}}</td>
-                <td>{{detalleFactura.iva}}</td>
-                <td>{{detalleFactura.total}}</td>
-                <td><button type="button" (click)="toggleForm(2, detalleFactura)">Editar</button></td>
-                <td><button type="button" (click)="onClickBorrar(detalleFactura.id, detalleFactura.concepto)">Borrar</button></td>
-            </tr>
+            @for (detalleFactura of detallesFactura; track $index) {
+                <tr>
+                    <td>{{detalleFactura.id}}</td>
+                    <td>{{detalleFactura.cantidad}}</td>
+                    <td>{{detalleFactura.concepto}}</td>
+                    <td>{{detalleFactura.precio}}</td>
+                    <td>{{detalleFactura.iva}}</td>
+                    <td>{{detalleFactura.total}}</td>
+                    <td><button type="button" (click)="toggleForm(2, detalleFactura)">Editar</button></td>
+                    <td><button type="button" (click)="onClickBorrar(detalleFactura.id, detalleFactura.concepto)">Borrar</button></td>
+                </tr>
+            }
             <tr>
                 <td colspan="4">TOTALES</td>
                 <td>{{totalesIVA}}</td>
@@ -42,30 +44,32 @@
 
 <br><br>
 
-<div id="formDetalle" *ngIf="mostrarFormulario">
-    <form #detalleForm="ngForm" (ngSubmit)="onSubmit(detalleForm.value)">
-        <label for="cantidad">Cantidad: </label>
-        <input type="number" id="cantidad" name="cantidad" [(ngModel)]="detalleFacturaForm.cantidad" required>
-
-        <br><br>
-      
-        <label for="concepto">Concepto: </label>
-        <input type="text" id="concepto" name="concepto" [(ngModel)]="detalleFacturaForm.concepto" required>
-
-        <br><br>
-      
-        <label for="precio">Precio: </label>
-        <input type="number" id="precio" name="precio" [(ngModel)]="detalleFacturaForm.precio" required>
-
-        <br><br>
-      
-        <label for="tipo_iva">Tipo IVA: </label>
-        <input type="number" id="tipo_iva" name="tipo_iva" [(ngModel)]="detalleFacturaForm.tipo_iva" required>
-
-        <br><br>
-
-        <input type="hidden" id="id" name="id" [(ngModel)]="detalleFacturaForm.id">
-      
-        <button type="submit" (click)="toggleForm(0, detalleFacturaForm)" [disabled]="!detalleForm.valid">{{textoBoton}}</button>
-    </form>      
-</div>
+@if (mostrarFormulario) {
+    <div id="formDetalle">
+        <form #detalleForm="ngForm" (ngSubmit)="onSubmit(detalleForm.value)">
+            <label for="cantidad">Cantidad: </label>
+            <input type="number" id="cantidad" name="cantidad" [(ngModel)]="detalleFacturaForm.cantidad" required>
+    
+            <br><br>
+          
+            <label for="concepto">Concepto: </label>
+            <input type="text" id="concepto" name="concepto" [(ngModel)]="detalleFacturaForm.concepto" required>
+    
+            <br><br>
+          
+            <label for="precio">Precio: </label>
+            <input type="number" id="precio" name="precio" [(ngModel)]="detalleFacturaForm.precio" required>
+    
+            <br><br>
+          
+            <label for="tipo_iva">Tipo IVA: </label>
+            <input type="number" id="tipo_iva" name="tipo_iva" [(ngModel)]="detalleFacturaForm.tipo_iva" required>
+    
+            <br><br>
+    
+            <input type="hidden" id="id" name="id" [(ngModel)]="detalleFacturaForm.id">
+          
+            <button type="submit" (click)="toggleForm(0, detalleFacturaForm)" [disabled]="!detalleForm.valid">{{textoBoton}}</button>
+        </form>      
+    </div>
+}
